Use Java modern features/APIs (#357)
* refactor: Run openrewrite to use Java 17 features

This mainly uses:

- Text blocks: https://openjdk.org/jeps/378
- Pattern matching: https://openjdk.org/jeps/394

* refactor: a few usages of newer Collections APIs